grantlee (0.3.0-3) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * Update symbols files.
  * Update Vcs-* headers.
  * Add the pkg-kde-tools build dependency and make use of the
    pkgkde_symbolshelper dh addon for subst-using symbols.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Sun, 12 May 2013 16:17:15 +0200

grantlee (0.3.0-2) unstable; urgency=low

  * Add myself to uploaders
  * Add a watch file
  * Bump debhelper build-dep and compat to 9
  * Bump Standards-Version to 3.9.4
  * Add Vcs-Git and Vcs-Browser fields
  * Migrate cdbs to dh
  * Update symbols files

 -- Maximiliano Curia <maxy@debian.org>  Sun, 12 May 2013 13:24:24 +0200

grantlee (0.3.0-1) experimental; urgency=low

  * New upstream release
  * Add myself to uploaders
  * Update symbols files

 -- Sune Vuorela <sune@debian.org>  Mon, 25 Mar 2013 15:46:10 +0100

grantlee (0.2.0-1) unstable; urgency=low

  * New upstream reelase
  * Add grantlee_i18ntags.so plugin to libgrantlee-core0

 -- Bjoern Ricks <bjoern.ricks@intevation.de>  Wed, 15 Feb 2012 13:26:47 +0100

grantlee (0.1.7-1) unstable; urgency=low

  * New upstream release 
  * Set compat level to 7
  * Include cdbs util.mk in rules to check missing files
  * Enable DEB_BUILD_PARALLEL

 -- Bjoern Ricks <bjoern.ricks@intevation.de>  Fri, 10 Dec 2010 11:22:37 +0100

grantlee (0.1.4-1) unstable; urgency=low

  * Initial release

 -- Bjoern Ricks <bjoern.ricks@intevation.de>  Thu, 29 Jul 2010 10:30:08 +0200 