@@ -5,7 +5,8 @@ Maintainer: Debian Krap Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Bjoern Ricks <bjoern.ricks@intevation.de>,
            Sune Vuorela <sune@debian.org>,
            Maximiliano Curia <maxy@debian.org>
-Build-Depends: debhelper (>= 9), libqt4-dev (>= 4.5), cmake, pkg-kde-tools
+Build-Depends: debhelper (>= 9), libqt4-dev (>= 4.5), cmake, pkg-kde-tools,
+ xvfb, xauth
 Standards-Version: 3.9.4
 Homepage: http://www.grantlee.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/krap/grantlee.git;a=summary
